Change text functional

--- a/src/main/resources/localization/local_en.properties
+++ b/src/main/resources/localization/local_en.properties
@@ -20,5 +20,6 @@ local.nonews = No news
 local.comments = Comments
 local.addcomment = Add rewiews
 local.addnews = Add post
+local.messageTranslate = Add translate - 
 local.sendchanges = Send changes
 local.forviewnews = To view and add comments, log in or register!
