--- a/src/main/resources/localization/local_ru.properties
+++ b/src/main/resources/localization/local_ru.properties
@@ -9,7 +9,7 @@ local.signin = Вход
 local.signup = Регистрация
 local.write = Написать
 local.signout = Выход
-local.category = Катигории:
+local.category = Катигории
 local.comments = Коментарии
 local.rights = Все права защищены!
 local.answer = ответить
@@ -20,6 +20,7 @@ local.viewnews = Смотреть новость
 local.nonews = Новостей нет
 local.addcomment = Оставить отзыв
 local.addnews = Отправить новость
+local.messageTranslate = Переведите новость на - 
 local.sendchanges = Отправить изменения
 local.forviewnews = Что бы смотреть еще, войдите или зарегистрируйтесь!
 local.loginmessage = Войдите или зарегистрируйтесь, что бы видеть категории!
