--- a/src/main/resources/localization/local.properties
+++ b/src/main/resources/localization/local.properties
@@ -20,5 +20,6 @@ local.nonews = No news
 local.addcomment = Add rewiews
 local.addnews = Add post
 local.sendchanges = Send changes
+local.messageTranslate = Add translate - 
 local.forviewnews = To view and add comments, log in or register!
 local.loginmessage = Log in or register for read news.
