--- a/src/main/resources/localization/local.properties
+++ b/src/main/resources/localization/local.properties
@@ -23,3 +23,6 @@ local.sendchanges = Send changes
 local.messageTranslate = Add translate - 
 local.forviewnews = To view and add comments, log in or register!
 local.loginmessage = Log in or register for read news.
+local.accept = accept
+local.cancel = cancel
+local.question = Dou ou want delete news?
