--- a/src/main/resources/localization/local_ru.properties
+++ b/src/main/resources/localization/local_ru.properties
@@ -24,4 +24,7 @@ local.messageTranslate = Переведите новость на -
 local.sendchanges = Отправить изменения
 local.forviewnews = Что бы смотреть еще, войдите или зарегистрируйтесь!
 local.loginmessage = Войдите или зарегистрируйтесь, что бы видеть категории!
+local.accept = Подтвердить
+local.cancel = Отмена
+local.question = Вы действительно хотите удалить новость?
 
