--- a/src/main/resources/localization/local.properties
+++ b/src/main/resources/localization/local.properties
@@ -26,3 +26,4 @@ local.loginmessage = Log in or register for read news.
 local.accept = accept
 local.cancel = cancel
 local.question = Dou ou want delete news?
+local.messageReg = Password must contain numbers,special charactersб uppercase and lowercase letters. Minimum length is 6 characters!
