--- a/src/main/resources/localization/local_en.properties
+++ b/src/main/resources/localization/local_en.properties
@@ -23,3 +23,5 @@ local.addnews = Add post
 local.messageTranslate = Add translate - 
 local.sendchanges = Send changes
 local.forviewnews = To view and add comments, log in or register!
+local.messageReg = Password must contain numbers,special charactersб uppercase and lowercase letters. Minimum length is 6 characters!
+
